# quote-manager

./: README.md  __init__.py  downloader.py  generate_utils.py  main.py  manager.py  pyproject.toml  setup.py
quote_depencives/: __init__.py  manager.py
quote_manager/: __init__.py  downloader.py  manager.py
