[tool.poetry]
name = "quote-manager"
version = "1.0.0"
description = ""
authors = ["ymoth"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
requests = "^2.28.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
